src/styles/marketplaceDefaults.css
/* ... */
/* add-ons */
#home-hero {
  div:last-of-type {
    height: 85vh;
    @media (--viewportLarge) {
      height: 50vh;
    }
  }
  header {
    width: 90%;
    padding: 2rem;
    background: rgba(255,255,255,.85);
    @media (max-width: 600px) {
      margin: 0 auto;
    }
    @media (min-width: 1128px) and (max-width: 1400px) {
      width: 70%;
      margin: 0 0 0 10vw;
    }
    @media (min-width: 1401px) {
      width: 65%;
      margin: 0 0 0 20vw;
    }
    h1 {
      justify-self: flex-start;
      font-size: 1.75rem;
      font-weight: 700;
      text-align: left;
      /* text-wrap: auto; */
      color: var(--colorText);
      @media (--viewportLarge) {
        font-size: 2.5rem;
      } 
    }
    p {
      font-size: 1rem;
      font-weight: 300;
      text-align: left;
      text-wrap: auto;
      color: var(--colorText);
      @media (--viewportLarge) {
        font-size: 1.125rem;
        margin-top: .75rem;
      }
    }
    a {
      justify-self: flex-start;
      font-size: .75rem;
      font-weight: 800;
      text-transform: uppercase;
      @media (--viewportLarge) {
        font-size: 1rem;
        font-weight: 600;
      }
    }
  }
}

#how-to-home header {
  justify-content: flex-start;
  h2 {
    justify-self: flex-start;
    color: var(--colorPrimary);
    text-align: left;
  }
  p {
    justify-self: flex-start;
    margin-top: 1rem;
    padding: 0;
    text-align: left;
    text-wrap: auto;
    max-width: 100%;
  }
}

#howto-step-1 div:first-of-type,
#howto-step-2 div:first-of-type,
#howto-step-3 div:first-of-type,
#howto-step-4 div:first-of-type {
  width: 60px;
  height: 60px;
}

#howto-step-1 h3,
#howto-step-2 h3,
#howto-step-3 h3,
#howto-step-4 h3 {
  margin-bottom: 0;
  padding: 0;
  font-size: 1.375rem;
  font-weight: 600 !important;
  line-height: 1;
  color: black;
}
#howto-step-1:hover h3,
#howto-step-2:hover h3,
#howto-step-3:hover h3,
#howto-step-4:hover h3 {
  color: var(--colorPrimary);
}

#howto-step-1 p,
#howto-step-2 p,
#howto-step-3 p,
#howto-step-4 p {
  margin-top: 1rem;
}

#how-to-sell {
  div:first-of-type {
    header, div {
      background: #fe1b00;
    }
    header {
      padding: 2rem 1rem 1rem;
      display: flex;
      flex-direction: column;
      align-items: center;
      h2, p {
        color: #fff;
        text-align: center;
      }
    }
    div {
      h3, p {
        color: #fff;
        text-align: center;
      }
    }
  }
}

#privacy header,
#terms header {
  justify-content: flex-start;
  h1, p {
    text-align: left;
    justify-self: flex-start;
  }
  .description {
    max-width: 100%;
  }
}
#privacy ul,
#terms ul {
  margin-top: 0;
  padding: 0 1rem;
}

